--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 # 环境
 NODE_ENV=development
 
-# 接口前缀
-VITE_APP_BASE_API=dev
+# 接口路径
+VITE_API_BASEURL='http://127.0.0.1:3000/'
 
 # 打包路径
 VITE_BASE_PATH=/dist-dev/
