--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "element-plus": "^2.7.6",
+    "less-loader": "^12.2.0",
+    "vue": "^3.4.29",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@eslint/js": "^9.6.0",
